Fixed horizontal scroll issue

--- a/hvala.css
+++ b/hvala.css
@@ -36,5 +36,5 @@ body a:hover{
     transition: 0.5s;
 }
 body h1,h2{
-    padding: 0 10px;
+    margin: 0 10px;
 }
