--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
     margin: 0;
     scroll-behavior: smooth;
 }
+html,body{
+    overflow-x: hidden;
+}
 html:focus-within {
     scroll-behavior: smooth;
 }
 body{
     font-family: 'Raleway', sans-serif;
     background-color: white;
-    overflow-x: hidden;
+    position: relative;
 }
 ::-moz-selection{
     color: white;
